syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

// 购物车
message Cart {
  string id = 1;
  // 用户ID
  string user_id = 2;
  // 商品ID
  string goods_id = 3;
  // 商品SKU
  string goods_sku = 4;
  // 购买数量
  uint32 num = 5;
  // 金额
  uint32 amount = 6;
  // 加入购物车时间
  google.protobuf.Timestamp dateline = 7;
}